[tool.poetry]
name = "antelopy"
version = "0.1.4"
description = "Python helper for Antelope transaction serialization"
authors = ["Jake Hattwell <stuck@sixpm.dev>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/stuckatsixpm/antelopy"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
coverage = "^7.3.2"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
