[tool.poetry]
name = "antelopy"
version = "0.2.0"
description = "Python helper for Antelope transaction serialization"
authors = ["Jake Hattwell <stuck@sixpm.dev>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/stuckatsixpm/antelopy"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
coverage = "^7.3.2"
tox = "^4.11.3"
isort = "^5.12.0"

[tool.poetry.group.aioeos]
optional = true

[tool.poetry.group.aioeos.dependencies]
aioeos = "^1.0.2"

[tool.poetry.group.eospy]
optional = true

[tool.poetry.group.eospy.dependencies]
libeospy = "^2.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.8"
mike = "^2.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
